Convert tab to spaces

--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Panorama Gallery</title>
-		<meta charset="utf-8">
+  <head>
+    <title>Panorama Gallery</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="jscss/pannellum.css" />
+    <link rel="stylesheet" type="text/css" href="jscss/pannellum.css" />
     <link rel="stylesheet" type="text/css" href="jscss/video-js.css">
     <script src="jscss/pannellum.js"></script>
     <script src="jscss/video.js"></script>
@@ -53,6 +53,7 @@
       </div>
     </div>
 
+    <!-- Script that controls everything -->
     <script type="text/javascript" src="jscss/gear360.js"></script>
 
   </body>
